tools/gd/src/snapshots/gd__pager__tests__key_u_tree_focused_single_file_stays_within.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 36,
    top_line: 30,
    active_file: Some(
        1,
    ),
    tree_visible: true,
    tree_focused: true,
    tree_cursor: 0,
    mode: Normal,
    status_message: "Hunk 1/2 · b.rs",
    full_context: false,
    visual_anchor: 0,
}
