tools/gd/src/snapshots/gd__pager__tests__snapshot_tree_lines_flat.snap
---
source: gd/src/pager.rs
expression: "stripped.join(\"\\n\")"
---
├──  M a.rs  
├──  M b.rs  
└──  M c.rs
