tools/gd/src/snapshots/gd__pager__tests__snapshot_tree_lines_nested.snap
---
source: gd/src/pager.rs
expression: "stripped.join(\"\\n\")"
---
├──  M README.md    
└──  src            
    ├──  M lib.rs   
    └──  M main.rs
