tools/gd/src/snapshots/gd__pager__tests__tree_enter_scrolls_without_active_file.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 30,
    top_line: 30,
    active_file: None,
    tree_visible: true,
    tree_focused: true,
    tree_cursor: 1,
    mode: Normal,
    status_message: "",
    full_context: false,
    visual_anchor: 0,
}
