tools/gd/src/snapshots/gd__pager__tests__tree_k_scrolls_without_active_file.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 0,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    tree_focused: true,
    tree_cursor: 0,
    mode: Normal,
    status_message: "",
    full_context: false,
    visual_anchor: 0,
}
