tools/gd/src/snapshots/gd__pager__tests__visual_k_clamps_at_file_boundary.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 30,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 0,
    mode: Visual,
    status_message: "",
    full_context: false,
    visual_anchor: 31,
}
